--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@ body {
 .card .top-section {
   position: relative;
   height: 150px;
-  background: linear-gradient(45deg, #049fbb 0%, #50f6ff 100%);
+  background: linear-gradient(45deg, #049fbb 0%,
+                              #50f6ff 100%);
   border-radius: 12px;
   display: flex;
   flex-direction: column;
